project1 chat commit

--- a/projects/P01-Chatroom/starter_code/src/main/resources/templates/chat.html
+++ b/projects/P01-Chatroom/starter_code/src/main/resources/templates/chat.html
@@ -36,7 +36,9 @@
                         <input class="mdui-textfield-input" id="msg"/>
                     </div>
                     <div class="mdui-container" style="padding:20px 35px">
-                        <!-- TODO: add a send button to send message -->
+                        <button class="mdui-btn mdui-color-theme-accent mdui-ripple"
+                                onclick="sendMsgToServer()">Enter
+                        </button>
                         <button class="mdui-btn mdui-color-theme mdui-ripple"
                                 onclick="clearMsg()">Clear
                         </button>
@@ -55,11 +57,12 @@
                     <span class="mdui-chip-icon mdui-color-blue">
                         <i class="mdui-icon material-icons">face</i></span>
                     <span class="mdui-chip-title">Online Users</span>
-                    <!-- TODO: check online number num -->
+                    <span class="mdui-chip-title chat-num">0</span>
                 </div>
-                <!-- TODO: add a message container -->
+                <div class="message-container">
             </div>
 
+            </div>
         </div>
     </div>
 </div>
